...

            <TextView
                android:id="@+id/textview_dialog_certificate_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textview_dialog_certificate_settings_allow_legacy_tls_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_certificate_settings_allow_legacy_tls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textview_dialog_certificate_settings_allow_legacy_tls_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textview_dialog_certificate_settings_ignore_ssl_error_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_certificate_settings_ignore_ssl_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textview_dialog_certificate_settings_ignore_ssl_error_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textview_dialog_certificate_settings_failure_on_certificate_expiry_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_certificate_settings_failure_on_certificate_expiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textview_dialog_certificate_settings_failure_on_certificate_expiry_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/linearlayout_dialog_certificate_settings_expiry_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textview_dialog_certificate_settings_expiry_days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_certificate_settings_expiry_days"
                android:text="@string/label_dialog_certificate_settings_expiry_days" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="@integer/edittext_dialog_certificate_settings_expiry_days_max_length"
...

            <ImageView
                android:id="@+id/imageview_dialog_certificate_settings_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
