<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="label_dialog_certificate_settings_ok">@android:string/ok</string>
    <string name="label_dialog_certificate_settings_cancel">@android:string/cancel</string>
    <string name="label_dialog_certificate_settings_title">Certificate settings</string>
    <string name="label_dialog_certificate_settings_allow_legacy_tls">Allow legacy TLS</string>
    <string name="label_dialog_certificate_settings_ignore_ssl_error">Ignore certificate errors</string>
    <string name="label_dialog_certificate_settings_failure_on_certificate_expiry">Failure on expiry</string>
    <string name="label_dialog_certificate_settings_expiry_days">Expiry days</string>
    <integer name="edittext_dialog_certificate_settings_expiry_days_max_length">4</integer>
</resources>
