<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <integer name="suspension_interval_min_distance">30</integer>
    <integer name="suspension_interval_min_duration">30</integer>
    <integer name="suspension_interval_default_start_hour">22</integer>
    <integer name="suspension_interval_default_start_minute">0</integer>
    <integer name="suspension_interval_default_duration">360</integer>
    <integer name="suspension_interval_largest_gap_min_duration">90</integer>
    <integer name="suspension_interval_largest_gap_threshold_duration">240</integer>
    <integer name="suspension_interval_current_gap_min_distance">60</integer>
    <integer name="suspension_interval_current_gap_threshold_distance">180</integer>
    <integer name="suspension_interval_threshold_distance">60</integer>
    <integer name="suspension_interval_threshold_duration">120</integer>
</resources>